# backup-to-cloud

./: Cargo.toml  LICENSE  README.md  backup-to-baidu.service  backup-to-baidu.timer  backup-to-cloud.service  backup-to-cloud.timer  backup.example.toml
.github/workflows/: build.yml  release.yml
src/: baidu.rs  cloud189.rs  main.rs
