[package]
name = "backup-to-cloud"
version = "0.7.1"
edition = "2024"

[dependencies]
estan = { git = "https://github.com/bigtan/estan", branch = "master", features = ["uploader-baidu", "uploader-cloud189"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13"
