[package]
name = "backup-to-cloud"
version = "0.7.5"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
estan = { git = "https://github.com/bigtan/estan", tag = "v0.1.4", features = ["uploader-baidu", "uploader-cloud189"] }
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13"
